--- a/pages/tableau.html
+++ b/pages/tableau.html
@@ -232,103 +232,69 @@
             </head>
             <h2>Tableau Public Portfolio</h2>
 
-            <div class="tableauPlaceholder" id="viz1761785402160"
-              style="position: relative">
-              <noscript><a href="#"><img
-                    alt="British Airways "
-                    src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Br&#47;BritishAirwaysDashboard_17615028723800&#47;BritishAirways&#47;1_rss.png"
-                    style="border: none" /></a></noscript><object
-                class="tableauViz" style="display: none">
-                <param name="host_url"
-                  value="https%3A%2F%2Fpublic.tableau.com%2F" />
-                <param name="embed_code_version" value="3" />
-                <param name="site_root" value />
-                <param
-                  name="name"
-                  value="BritishAirwaysDashboard_17615028723800&#47;BritishAirways" />
-                <param name="tabs" value="no" />
-                <param name="toolbar" value="yes" />
-                <param
-                  name="static_image"
-                  value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Br&#47;BritishAirwaysDashboard_17615028723800&#47;BritishAirways&#47;1.png" />
-                <param name="animate_transition" value="yes" />
-                <param name="display_static_image" value="yes" />
-                <param name="display_spinner" value="yes" />
-                <param name="display_overlay" value="yes" />
-                <param name="display_count" value="yes" />
-                <param name="language" value="en-US" />
-              </object>
-            </div>
-            <script type="text/javascript">
-              var divElement = document.getElementById("viz1761785402160");
-              var vizElement = divElement.getElementsByTagName("object")[0];
-              if (divElement.offsetWidth > 800) {
-                vizElement.style.width = "1200px";
-                vizElement.style.height = "727px";
-              } else if (divElement.offsetWidth > 500) {
-                vizElement.style.width = "1200px";
-                vizElement.style.height = "727px";
-              } else {
-                vizElement.style.width = "100%";
-                vizElement.style.height = "1427px";
-              }
-              var scriptElement = document.createElement("script");
-              scriptElement.src = "https://public.tableau.com/javascripts/api/viz_v1.js";
-              vizElement.parentNode.insertBefore(scriptElement, vizElement);
-            </script>
+            <div class='tableauPlaceholder' id='viz1761839611950'
+              style='position: relative'><noscript><a href='#'><img
+                    alt='British Airways '
+                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Br&#47;BritishAirwaysDashboard_17615028723800&#47;BritishAirways&#47;1_rss.png'
+                    style='border: none' /></a></noscript><object
+                class='tableauViz' style='display:none;'><param name='host_url'
+                  value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param
+                  name='embed_code_version' value='3' /> <param name='site_root'
+                  value /><param name='name'
+                  value='BritishAirwaysDashboard_17615028723800&#47;BritishAirways' /><param
+                  name='tabs' value='no' /><param name='toolbar'
+                  value='yes' /><param name='static_image'
+                  value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Br&#47;BritishAirwaysDashboard_17615028723800&#47;BritishAirways&#47;1.png' />
+                <param name='animate_transition' value='yes' /><param
+                  name='display_static_image' value='yes' /><param
+                  name='display_spinner' value='yes' /><param
+                  name='display_overlay' value='yes' /><param
+                  name='display_count' value='yes' /><param name='language'
+                  value='en-US' /></object></div> <script
+              type='text/javascript'>                    var divElement = document.getElementById('viz1761839611950');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1200px';vizElement.style.height='727px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1200px';vizElement.style.height='727px';} else { vizElement.style.width='100%';vizElement.style.height='1427px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
-            <div class="tableauPlaceholder" id="viz1761780253443"
-              style="position: relative">
-              <noscript><a href="#"><img
-                    alt=" "
-                    src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sa&#47;SalesCustomerDashboards_17617785097160&#47;CustomerDashboard&#47;1_rss.png"
-                    style="border: none" /></a></noscript><object
-                class="tableauViz" style="display: none">
-                <param name="host_url"
-                  value="https%3A%2F%2Fpublic.tableau.com%2F" />
-                <param name="embed_code_version" value="3" />
-                <param name="site_root" value />
-                <param
-                  name="name"
-                  value="SalesCustomerDashboards_17617785097160&#47;CustomerDashboard" />
-                <param name="tabs" value="no" />
-                <param name="toolbar" value="yes" />
-                <param
-                  name="static_image"
-                  value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sa&#47;SalesCustomerDashboards_17617785097160&#47;CustomerDashboard&#47;1.png" />
-                <param name="animate_transition" value="yes" />
-                <param name="display_static_image" value="yes" />
-                <param name="display_spinner" value="yes" />
-                <param name="display_overlay" value="yes" />
-                <param name="display_count" value="yes" />
-                <param name="language" value="en-US" />
-                <param name="filter" value="publish=yes" />
-              </object>
-            </div>
+            <div class='tableauPlaceholder' id='viz1761839572870'
+              style='position: relative'><noscript><a href='#'><img
+                    alt='Sales Dashboard '
+                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sa&#47;SalesCustomerDashboards_17617785097160&#47;SalesDashboard&#47;1_rss.png'
+                    style='border: none' /></a></noscript><object
+                class='tableauViz' style='display:none;'><param name='host_url'
+                  value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param
+                  name='embed_code_version' value='3' /> <param name='site_root'
+                  value /><param name='name'
+                  value='SalesCustomerDashboards_17617785097160&#47;SalesDashboard' /><param
+                  name='tabs' value='no' /><param name='toolbar'
+                  value='yes' /><param name='static_image'
+                  value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sa&#47;SalesCustomerDashboards_17617785097160&#47;SalesDashboard&#47;1.png' />
+                <param name='animate_transition' value='yes' /><param
+                  name='display_static_image' value='yes' /><param
+                  name='display_spinner' value='yes' /><param
+                  name='display_overlay' value='yes' /><param
+                  name='display_count' value='yes' /><param name='language'
+                  value='en-US' /></object></div> <script
+              type='text/javascript'>                    var divElement = document.getElementById('viz1761839572870');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1200px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1200px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='2527px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
-            <div class="tableauPlaceholder" id="viz1761785356118"
-              style="position: relative">
-              <noscript><a href="#"><img
-                    alt="Nationwide Home Builder "
-                    src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;XB&#47;XB7G8KBK2&#47;1_rss.png"
-                    style="border: none" /></a></noscript><object
-                class="tableauViz" style="display: none">
-                <param name="host_url"
-                  value="https%3A%2F%2Fpublic.tableau.com%2F" />
-                <param name="embed_code_version" value="3" />
-                <param name="path" value="shared&#47;XB7G8KBK2" />
-                <param name="toolbar" value="yes" />
-                <param
-                  name="static_image"
-                  value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;XB&#47;XB7G8KBK2&#47;1.png" />
-                <param name="animate_transition" value="yes" />
-                <param name="display_static_image" value="yes" />
-                <param name="display_spinner" value="yes" />
-                <param name="display_overlay" value="yes" />
-                <param name="display_count" value="yes" />
-                <param name="language" value="en-US" />
-              </object>
-            </div>
+            <div class='tableauPlaceholder' id='viz1761839559260'
+              style='position: relative'><noscript><a href='#'><img
+                    alt='Nationwide Home Builder '
+                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;FictionalNationalHomebuilder&#47;NationwideHomeBuilder&#47;1_rss.png'
+                    style='border: none' /></a></noscript><object
+                class='tableauViz' style='display:none;'><param name='host_url'
+                  value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param
+                  name='embed_code_version' value='3' /> <param name='site_root'
+                  value /><param name='name'
+                  value='FictionalNationalHomebuilder&#47;NationwideHomeBuilder' /><param
+                  name='tabs' value='no' /><param name='toolbar'
+                  value='yes' /><param name='static_image'
+                  value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;FictionalNationalHomebuilder&#47;NationwideHomeBuilder&#47;1.png' />
+                <param name='animate_transition' value='yes' /><param
+                  name='display_static_image' value='yes' /><param
+                  name='display_spinner' value='yes' /><param
+                  name='display_overlay' value='yes' /><param
+                  name='display_count' value='yes' /><param name='language'
+                  value='en-US' /></object></div> <script
+              type='text/javascript'>                    var divElement = document.getElementById('viz1761839559260');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1200px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1200px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1977px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
             <script type="text/javascript">
               var divElement = document.getElementById("viz1761785356118");
               var vizElement = divElement.getElementsByTagName("object")[0];
